syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.nvvi9";
import "thumbnail.proto";
package com.nvvi9;

message VideoDetails{
  string id = 1;
  string title = 2;
  string channel = 3;
  string channel_id = 4;
  string description = 5;
  int64 duration_seconds = 6;
  int64 view_count = 7;
  repeated Thumbnail thumbnails = 8;
  int64 expires_in_seconds = 9;
  bool is_live_stream = 10;
}